# SEAME_2026_Hackathon

./: .claudeignore  .gitignore  AUDIT_INCOURSE_2026-07-14.md  CLAUDE.md  DEBUGGING_MANUAL.md  HANDOFF.md  MISSING_FEATURES.md  README.md  RUN_LOG_2026-07-12.md  WORKLOG.md  debugging-manual (1).md
D-Racer-Kit/: .gitignore  AUTODRIVE.md  README.md
D-Racer-Kit/config/: race_params.yaml
D-Racer-Kit/docs/: CHANGES_lane_and_roundabout.md  TROUBLESHOOTING.md  [1] D-Racer Hardware Assembly Guide.md  [2] Development Environment Setup Guide.md  [3] D-Racer ROS2 Package Build Guide.md  [4] Monitor Package.md  [5] Battery Package.md  [6] Camera Package.md  [7] Joystick & Control Package.md  [8] OpenCV Package.md  dataflow.dot  lane_bev_guided.md  lookahead_control.md
D-Racer-Kit/src/config/: vehicle_config.yaml
D-Racer-Kit/src/perception/: package.xml  setup.py
D-Racer-Kit/src/perception/perception/: aruco_node.py  lane_detector.py  lane_node.py
D-Racer-Kit/src/perception_msgs/: CMakeLists.txt  package.xml
D-Racer-Kit/src/perception_msgs/msg/: ArucoState.msg  LaneState.msg
D-Racer-Kit/tests/: test_lane_detector_single_line.py
D-Racer-Kit/tools/: hsv_sampler.py  identify_aruco.py  record_camera_mp4.py  record_eval.py  save_params.sh
install/: local_setup.sh  setup.sh
log/: latest_build
opencv/: hsv_filter.py  lane_follow.py  lane_node.py  mission_node.py  pd_controller.py  yolo_detector.py
training/: .gitignore  README.md  build_dataset.py  classes.txt  data.yaml  detect.py  extract_frames.py  train.py
training/best_ncnn_model/: metadata.yaml  model_ncnn.py
(+47 files in other folders)
