<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>OpenCV lane following and ArUco detection nodes</description>
  <maintainer email="team@example.com">d-racer team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>perception_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
